--- a/sty/index.html
+++ b/sty/index.html
@@ -10,7 +10,22 @@
 </head>
 
 <body>
-
+    <main>
+        <article>
+            <img src="img/avatar.png" alt="Avatar Marek Rozwałka" />
+            <header>
+                <h1>Marek Rozwałka</h1>
+                <p>designer/developer</p>
+            </header>
+            <p>Programista z kilkuletnim doświadczeniem, fotografik, designer, przyjaciel Puszka i opiekun. Uwielbia
+                poznawać nowe technologie. Zamiast seriali w TV ogląda video kursy, cechują go nieszablonowe
+                projekty, często inspirowane. Posiada własną bibliotekę domową z Helion’u. Kto wie może wkrótce
+                stanie się jednym z autorów tej księgarni.
+                Kalistenika to ulubiony sport tego grafika. Uwielbia bawić się słowem. Styl walki: Muay Thai.</p>
+            <p>W sieci: <a href="#">Facebook</a>, <a href="#">GitHub</a>, <a href="#">Instagram</a>, <a
+                    href="#">LinkedIn</a>.</p>
+        </article>
+    </main>
 </body>
 
 </html>
