Basic styles for background & card.

--- a/sty/index.html
+++ b/sty/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <main>
+    <main class="card">
         <article>
             <img src="img/avatar.png" alt="Avatar Marek Rozwałka" />
             <header>
