Typhography styles & bem.

--- a/sty/index.html
+++ b/sty/index.html
@@ -14,15 +14,17 @@
         <article>
             <img src="img/avatar.png" alt="Avatar Marek Rozwałka" />
             <header>
-                <h1>Marek Rozwałka</h1>
-                <p>designer/developer</p>
+                <h1 class="card__name">Marek Rozwałka</h1>
+                <p class="card__position">designer/developer</p>
             </header>
-            <p>Programista z kilkuletnim doświadczeniem, fotografik, designer, przyjaciel Puszka i opiekun. Uwielbia
+            <p class="card__description">Programista z kilkuletnim doświadczeniem, fotografik, designer, przyjaciel
+                Puszka i opiekun. Uwielbia
                 poznawać nowe technologie. Zamiast seriali w TV ogląda video kursy, cechują go nieszablonowe
                 projekty, często inspirowane. Posiada własną bibliotekę domową z Helion’u. Kto wie może wkrótce
                 stanie się jednym z autorów tej księgarni.
                 Kalistenika to ulubiony sport tego grafika. Uwielbia bawić się słowem. Styl walki: Muay Thai.</p>
-            <p>W sieci: <a href="#">Facebook</a>, <a href="#">GitHub</a>, <a href="#">Instagram</a>, <a
+            <p class="card__description">W sieci: <a class="card__link" href="#">Facebook</a>, <a class="card__link"
+                    href="#">GitHub</a>, <a class="card__link" href="#">Instagram</a>, <a class="card__link"
                     href="#">LinkedIn</a>.</p>
         </article>
     </main>
