Add links paths.

--- a/sty/index.html
+++ b/sty/index.html
@@ -19,14 +19,17 @@
                     <p class="card__position">designer/developer</p>
                 </header>
                 <p class="card__description">Programista z kilkuletnim doświadczeniem, fotografik, designer, przyjaciel
-                    Puszka i opiekun. Uwielbia
+                    <a href="https://maskotka.awesomestudio.pl">Puszka</a> i opiekun. Uwielbia
                     poznawać nowe technologie. Zamiast seriali w TV ogląda video kursy, cechują go nieszablonowe
                     projekty, często inspirowane. Posiada własną bibliotekę domową z Helion’u. Kto wie może wkrótce
                     stanie się jednym z autorów tej księgarni.
-                    Kalistenika to ulubiony sport tego grafika. Uwielbia bawić się słowem. Styl walki: Muay Thai.</p>
-                <p class="card__description">W sieci: <a class="card__link" href="#">Facebook</a>, <a class="card__link"
-                        href="#">GitHub</a>, <a class="card__link" href="#">Instagram</a>, <a class="card__link"
-                        href="#">LinkedIn</a>.</p>
+                    Kalistenika to ulubiony sport tego grafika. Uwielbia bawić się słowem. Styl walki: Muay Thai.
+                </p>
+                <p class="card__description">W sieci: <a class="card__link"
+                        href="https://www.facebook.com/profile.php?id=61556303331474">Facebook</a>, <a
+                        class="card__link" href="https://github.com/marek-rozwalka">GitHub</a>, <a class="card__link"
+                        href="https://www.instagram.com/rozwalka.marek/">Instagram</a>, <a class="card__link"
+                        href="https://www.linkedin.com/in/marekrozwalka/">LinkedIn</a>.</p>
             </div>
         </article>
     </main>
