add new favorite sport

--- a/sty/index.html
+++ b/sty/index.html
@@ -23,7 +23,8 @@
                     poznawać nowe technologie. Zamiast seriali w TV ogląda video kursy, cechują go nieszablonowe
                     projekty, często inspirowane. Posiada własną bibliotekę domową z Helion’u. Kto wie może wkrótce
                     stanie się jednym z autorów tej księgarni.
-                    Kalistenika to ulubiony sport tego grafika. Uwielbia bawić się słowem. Styl walki: Muay Thai.
+                    Kalistenika to ulubiony sport tego grafika. Uwielbia bawić się słowem. Styl walki: Systema, Muay
+                    Thai.
                 </p>
                 <p class="card__description">W sieci: <a class="card__link"
                         href="https://www.facebook.com/profile.php?id=61556303331474">Facebook</a>, <a
